- Implemented GET /balance endpoint - Implemented POST /transaction endpoint - Moved 'common' and 'config' variables to separate modules - Added IOU and transaction database keys to keyingScheme.json - Renamed swagger.yaml response 'properties' to 'data' - Changed 'properties' to 'data' in endpoint responses - Added currency transaction request template
